<resources>
    <string name="create_account">I dont have account yet</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="app_name">Thu vien</string>
    <string name="relax">Vending Machine</string>
    <string name="book">Borrow Book</string>
    <string name="ban_do">Services Map</string>
    <string name="trungtam">Bản Đồ Trung Tâm Học Liệu</string>
    <string name="bandott">BandoTTHL</string>
    <string name="TTHL">Trung Tâm Học Liệu</string>
    <string name="KhuA">Dormitory</string>
    <string name="KhuC">CapTech</string>
    <string name="logout">Log Out</string>
    <string name="tu_hoc">Self Study</string>
    <string name="canteen1">CanTeen</string>
    <string name="canteen2">CanTeen</string>
    <string name="food_store1">Food Store</string>
    <string name="food_store2">Food Store</string>
    <string name="vending_machine1">Vending Machine</string>
    <string name="vending_machine2">Vending Machine</string>
    <string name="captech">CapTech Space</string>
    <string name="ktx">Dormitory Space</string>
</resources>
