<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Button
        android:id="@+id/tu_hoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relax"
        android:layout_alignEnd="@+id/relax"
        android:layout_alignLeft="@+id/relax"
        android:layout_alignRight="@+id/relax"
        android:layout_alignStart="@+id/relax"
        android:layout_marginBottom="40dp"
        android:text="@string/tu_hoc" />

    <Button
        android:id="@+id/relax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ban_do" />

    <Button
        android:id="@+id/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relax"
        android:layout_alignStart="@+id/relax"
        android:layout_below="@+id/relax"
        android:layout_marginTop="40dp"
        android:text="@string/book" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout"
        android:layout_toEndOf="@id/relax"
        android:layout_toRightOf="@id/relax" />
</RelativeLayout>