<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <Button
        android:id="@+id/TTHL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/KhuA"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/TTHL" />

    <Button
        android:id="@+id/KhuA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/TTHL"
        android:layout_alignLeft="@+id/TTHL"
        android:layout_alignRight="@+id/TTHL"
        android:layout_alignStart="@+id/TTHL"
        android:layout_centerVertical="true"
        android:text="@string/KhuA" />

    <Button
        android:id="@+id/KhuC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/TTHL"
        android:layout_alignLeft="@+id/TTHL"
        android:layout_alignRight="@+id/TTHL"
        android:layout_alignStart="@+id/TTHL"
        android:layout_below="@+id/KhuA"
        android:layout_marginTop="40dp"
        android:text="@string/KhuC" />



</RelativeLayout>